# dust-press

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  platformio.ini
.github/workflows/: plugin-build.yml
docs/: CONTROL_MAP.csv  DSP_ANATOMY.md  PLATFORMIO.md  USAGE.md
examples/live_control/: live_control.ino
examples/minimal/: minimal.ino
examples/presets_demo/: presets_demo.ino
native/: CMakeLists.txt  CMakePresets.json  README.md
native/.juce-build/: CMakeCache.txt  JUCEExportConfig.cmake  Makefile  cmake_install.cmake
native/.juce-build/extras/: Makefile  cmake_install.cmake
native/.juce-build/extras/AudioPerformanceTest/: Makefile  cmake_install.cmake
native/.juce-build/extras/AudioPerformanceTest/AudioPerformanceTest_artefacts/JuceLibraryCode/: Defs.txt  Info.txt
native/.juce-build/extras/AudioPerformanceTest/AudioPerformanceTest_artefacts/JuceLibraryCode/AudioPerformanceTest/: Info.plist
native/.juce-build/extras/AudioPluginHost/: Makefile  cmake_install.cmake
native/.juce-build/extras/AudioPluginHost/AudioPluginHost_artefacts/JuceLibraryCode/: Defs.txt  Info.txt
native/.juce-build/extras/AudioPluginHost/juce_binarydata_AudioPluginHostData/JuceLibraryCode/: input_file_list
native/.juce-build/extras/BinaryBuilder/: Makefile  cmake_install.cmake
native/.juce-build/extras/BinaryBuilder/BinaryBuilder_artefacts/JuceLibraryCode/: Defs.txt  Info.txt
native/.juce-build/extras/NetworkGraphicsDemo/: Makefile  cmake_install.cmake
native/.juce-build/extras/NetworkGraphicsDemo/NetworkGraphicsDemo_artefacts/JuceLibraryCode/: Defs.txt  Info.txt
native/.juce-build/extras/NetworkGraphicsDemo/NetworkGraphicsDemo_artefacts/NetworkGraphicsDemo.app/Contents/: Info.plist
native/.juce-build/extras/Projucer/: Makefile  cmake_install.cmake
native/.juce-build/extras/Projucer/Projucer_artefacts/JuceLibraryCode/: Defs.txt  Info.txt
native/.juce-build/extras/Projucer/Projucer_artefacts/Projucer.app/Contents/: Info.plist
native/.juce-build/extras/Projucer/juce_binarydata_ProjucerData/JuceLibraryCode/: input_file_list
native/.juce-build/extras/UnitTestRunner/: Makefile  cmake_install.cmake
native/.juce-build/extras/UnitTestRunner/UnitTestRunner_artefacts/JuceLibraryCode/: Defs.txt  Info.txt
native/.juce-build/modules/: Makefile  cmake_install.cmake
native/.juce-build/tools/: CMakeCache.txt  JUCEConfig.cmake  JUCEExportConfig.cmake  JUCEToolsExport.cmake  Makefile  cmake_install.cmake  install_manifest.txt
native/.juce-build/tools/modules/: Makefile  cmake_install.cmake
native/.juce-kit/include/JUCE-8.0.11/modules/juce_gui_basics/: juce_gui_basics.h
native/juce/: CMakeLists.txt  README.md
native/juce/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
native/patches/: juce_coreaudio_stride_iterator_traits.h
native/plugin/: CMakeLists.txt  DustPressAudioProcessor.cpp  DustPressAudioProcessor.h  DustPressAudioProcessorEditor.cpp  DustPressAudioProcessorEditor.h  README.md
native/src/: NativeDustPress.cpp  NativeDustPress.h  PluginState.cpp  PluginState.h  PresetLoader.cpp  PresetLoader.h  WavFile.cpp  WavFile.h  main.cpp  probe.cpp
presets/: presets.json
src/: AirEQ.cpp  AirEQ.h  CurveBank.cpp  CurveBank.h  DustPress.cpp  DustPress.h  EnvelopeFollower.cpp  EnvelopeFollower.h  LimiterLookahead.cpp  LimiterLookahead.h  ParamSmoother.cpp  ParamSmoother.h  SoftSaturation.cpp  SoftSaturation.h  TiltEQ.cpp  TiltEQ.h  main.cpp
tools/: README.md  bootstrap_juce.sh  curve_clip_harness.py  dustpress_probe_baseline.json  dustpress_probe_regression.py
